--- a/app/src/main/res/layout/activity_vault_album.xml
+++ b/app/src/main/res/layout/activity_vault_album.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/background_color">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/appbar_vault"
@@ -15,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/menu_vault"
+        app:menu="@menu/menu_vault_select_mode"
         app:title="@string/vault_title"
         app:titleTextColor="?attr/on_primary_color" />
 
@@ -27,6 +28,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar_vault" />
+
+    <ImageView
+        android:id="@+id/full_image_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#6D404040"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
