--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -122,6 +122,51 @@
                 android:background="?attr/divider_color" />
 
             <LinearLayout
+                android:id="@+id/auto_clean_settings"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:focusable="auto"
+                android:onClick="onAutoClean"
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="15dp">
+
+                <LinearLayout
+                    android:id="@+id/content_settings_auto_clean"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/title_settings_auto_clean"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_auto_clean_title"
+                        android:textSize="@dimen/settings_title_size" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="4dp" />
+
+                    <TextView
+                        android:id="@+id/subtitle_settings_auto_clean"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_auto_clean_menu_0"
+                        android:textSize="@dimen/settings_subtitle_size" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="match_parent"
+                android:layout_height="0.7dp"
+                android:background="?attr/divider_color" />
+
+            <LinearLayout
                 android:id="@+id/about_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -143,61 +188,7 @@
             </LinearLayout>
 
             <View
-                android:id="@+id/divider3"
-                android:layout_width="match_parent"
-                android:layout_height="0.7dp"
-                android:background="?attr/divider_color" />
-
-            <LinearLayout
-                android:id="@+id/temp1_settings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="auto"
-                android:onClick="function1"
-                android:orientation="horizontal"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="15dp">
-
-                <TextView
-                    android:id="@+id/title_settings_temp1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nút thứ nhất"
-                    android:textSize="@dimen/settings_title_size" />
-
-            </LinearLayout>
-
-            <View
                 android:id="@+id/divider4"
-                android:layout_width="match_parent"
-                android:layout_height="0.7dp"
-                android:background="?attr/divider_color" />
-
-            <LinearLayout
-                android:id="@+id/temp3_settings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="auto"
-                android:onClick="function3"
-                android:orientation="horizontal"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="15dp">
-
-                <TextView
-                    android:id="@+id/title_settings_temp3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nút thứ ba"
-                    android:textSize="@dimen/settings_title_size" />
-
-            </LinearLayout>
-
-            <View
-                android:id="@+id/divider5"
                 android:layout_width="match_parent"
                 android:layout_height="0.7dp"
                 android:background="?attr/divider_color" />
