--- a/app/src/main/res/layout/dialog_vault_reset_password.xml
+++ b/app/src/main/res/layout/dialog_vault_reset_password.xml
@@ -6,107 +6,108 @@
     app:layout_constraintLeft_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/purple_700"
-    android:orientation="vertical"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="40dp"
-    android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/vault_reset_password_title"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_marginBottom="50dp"/>
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/purple_700"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="left"
-        android:layout_marginBottom="20dp">
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="40dp">
 
-        <EditText
-            android:id="@+id/dialog_reset_password"
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="50dp"-->
+<!--            android:text="@string/vault_reset_password_title"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="30sp"-->
+<!--            android:textStyle="bold" />-->
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberPassword"
-            android:hint="@string/signup_vault_label_password"
-            android:maxLength="6"
-            android:textColor="@color/white"
-            android:textSize="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:gravity="left"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/dialog_reset_password_error"
+            <EditText
+                android:id="@+id/dialog_reset_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/signup_vault_label_password"
+                android:inputType="numberPassword"
+                android:maxLength="6"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/dialog_reset_password_error"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text=""
+                android:textColor="@color/red"
+                android:textSize="15sp"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@color/red"
-            android:textSize="15sp"
-            android:text=""
-            android:visibility="gone"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:gravity="left"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/dialog_confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/signup_vault_label_confirm_password"
+                android:inputType="numberPassword"
+                android:maxLength="6"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/dialog_confirm_password_error"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text=""
+                android:textColor="@color/red"
+                android:textSize="15sp"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/dialog_vault_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/signup_vault_restore_btn"
+                android:minHeight="30dp"
+                android:onClick="restore"
+                android:paddingHorizontal="20dp"
+                android:text="@string/dialog_vault_close_btn_title"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/dialog_vault_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/signup_vault_signup_btn"
+                android:minHeight="30dp"
+                android:onClick="start"
+                android:paddingHorizontal="20dp"
+                android:text="@string/dialog_vault_reset_btn_title"
+                android:textColor="@color/white" />
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="left"
-        android:layout_marginBottom="40dp">
-
-        <EditText
-            android:id="@+id/dialog_confirm_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberPassword"
-            android:hint="@string/signup_vault_label_confirm_password"
-            android:maxLength="6"
-            android:textColor="@color/white"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:id="@+id/dialog_confirm_password_error"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@color/red"
-            android:textSize="15sp"
-            android:text=""
-            android:visibility="gone"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-
-        <Button
-            android:id="@+id/dialog_vault_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/signup_vault_restore_btn"
-            android:minHeight="30dp"
-            android:onClick="restore"
-            android:paddingHorizontal="20dp"
-            android:text="@string/dialog_vault_close_btn_title"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/dialog_vault_reset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/signup_vault_signup_btn"
-            android:minHeight="30dp"
-            android:onClick="start"
-            android:paddingHorizontal="20dp"
-            android:layout_marginLeft="15dp"
-            android:text="@string/dialog_vault_reset_btn_title"
-            android:textColor="@color/white" />
-    </LinearLayout>
-</LinearLayout>
 
 </RelativeLayout>
