--- a/app/src/main/res/layout/activity_login_vault.xml
+++ b/app/src/main/res/layout/activity_login_vault.xml
@@ -11,8 +11,7 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:indeterminate="true"
-        android:visibility="invisible" />
+        android:indeterminate="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
