--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,9 @@
 
     <dimen name="vault_login_dot_margin">5dp</dimen>
 
-    <dimen name="photo_details_title_size">18sp</dimen>
-    <dimen name="photo_details_content_size">16sp</dimen>
-    <dimen name="photo_details_vert_margin">8dp</dimen>
+    <dimen name="dialog_title_size">18sp</dimen>
+    <dimen name="dialog_content_size">16sp</dimen>
+    <dimen name="dialog_vert_margin">8dp</dimen>
 
     <dimen name="trash_text_button_size">16sp</dimen>
 
