--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -167,6 +167,45 @@
                 android:background="?attr/divider_color" />
 
             <LinearLayout
+                android:id="@+id/grid_type_settings"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:focusable="auto"
+                android:onClick="onGridType"
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="15dp">
+
+                <LinearLayout
+                    android:id="@+id/content_settings_grid_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/title_settings_grid_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_grid_type_title"
+                        android:textSize="@dimen/settings_title_size" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="4dp" />
+
+                    <TextView
+                        android:id="@+id/subtitle_settings_grid_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_grid_type_menu_0"
+                        android:textSize="@dimen/settings_subtitle_size" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/about_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
