--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="divider_dark">#757575</color>
     <color name="hint_light">#A6A6A6</color>
     <color name="hint_dark">#DFDFDF</color>
+
+    <color name="icon_foreground">#FF5997FF</color>
 </resources>
