Tạo GIF, cấu trúc thư mục providers (ImagesProvider), HiGallery folder path

--- a/app/src/main/res/menu/menu_main_select_mode.xml
+++ b/app/src/main/res/menu/menu_main_select_mode.xml
@@ -18,5 +18,8 @@
     <item
         android:id="@+id/vault_selected_menu_main"
         android:title="@string/main_appbar_vault_selected" />
+    <item
+        android:id="@+id/generate_gif_selected_menu_main"
+        android:title="@string/main_appbar_generate_gif_selected" />
 
 </menu>
